# JiXing

./: .gitignore  README.md  README_CN.md  benchmark.py  publish.py  pyproject.toml  test_jixing.py  upload_pypi.bat  upload_pypi.sh
jixing/: __init__.py  api.py  cli.py  compressor.py  context_manager.py  core.py  db.py  long_running_executor.py  memory.py  tools.py  web.py
jixing/models/: __init__.py  base.py  moxing.py  ollama.py
jixing/templates/: index.html
tank_game/tank_game/: main.py
tests/: FIX_LONG_RUNNING_TASK.md  LONG_RUNNING_TASK_GUIDE.md  conftest.py  test_api.py  test_cli.py  test_context_management.py  test_core.py  test_db.py  test_jixing_full.py  test_long_running.py  test_memory.py  test_models.py  test_tools.py  test_unified_api.py  test_web.py
tests/data/: benchmark_results.json  test_data.json
