[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jixing"
version = "1.0.0"
description = "Local AI Model Assistant with Long-term Memory System"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "JiXing Team"}
]
keywords = ["ollama", "moxing", "local-ai", "model-runner", "memory-system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "sqlite-utils>=3.37",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
gui = ["flask>=3.0.0", "flask-cors>=4.0.0"]

[project.scripts]
jixing = "jixing.cli:main"

[tool.setuptools.dynamic]
version = {attr = "jixing.__version__"}

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
exclude = ["jixing/web.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
